# pokero

./: .gitignore  .gitmodules  .semgrepignore  README.md  compose.dev.yml  compose.yml  pyproject.toml  zap-rules.tsv
.github/workflows/: docker-publish.yml
app/: db.sqlite3
app/app/: db_router.py  middleware.py  settings.py  urls.py  views.py
app/comments/: models.py  urls.py  views.py
app/comments/migrations/: 0001_initial.py
app/games/: models.py  urls.py  views.py
app/games/migrations/: 0001_initial.py
app/tables/: models.py  urls.py  views.py
app/tables/migrations/: 0001_initial.py  0002_table_creator.py
app/templates/: 403.html  404.html  base.html  main_page.html  register_form.html
app/templates/comments/: comment_create_form.html  comment_update_form.html
app/templates/games/: game_create_form.html  game_update_form.html
app/templates/registration/: login.html
app/templates/tables/: table_create_form.html  table_detail.html  table_list.html  table_update_form.html
docker/: Dockerfile  Dockerfile.dev
falco-rules/: custom-rules.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: django.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  network-policy.yaml  postgres.yaml  secret.yaml
infra/: falco-values.yaml  kube-bench.yaml  monitoring-values.yaml  network-policy.yaml  pod-dashboard.json
